Fix issues with font sizes and alignment

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $secondary-inverted: hsla(54, 91%, 96%, 1);
 $white: #dcdcdc;
 $white-calmer: #c4c4c4;
 $white-brighter: #f5f5f5;
+$black: #000000;
 $select: #00A300;
 
 $full-screen-height: 100vh;
